tests/ui/fail/visibility_self.rs
fn main() {}

mod def {
	#[::pud::pud(vis = pub(self))]
	pub struct Foo {
		a: u8,
	}
}

use def::FooPud;
